2007-04-17: Release version 2.08

        * (no runtime-visible changes from 2.07)

        * mogilefsd: remove incomplete "Checker" worker, replace with
          incomplete "Fsck" worker.

        * test cleanup/robustness improvements.  properly skips testing when
          testin deps not found.  but searches harder for them now, too.
          tests run under "make disttest".

        * packaging cleanups, released using ShipIt.


2007-03/04:

        * mogilefsd: Split Plugin::MetaData and Plugin::FilePaths into their own distributions.

        * mogilefsd: Fix mogdbsetup to not ask empty questions.

        * mogilefsd: command line/config file support for listening on specific IPs, also
           support for listening on multiple IPs/ports

2007-03-19:
        * mogstored: use XS HTTPHeaders by default, unless disabled with environment variable

        * mogilefsd: memcache support for get_paths (see doc/memcache-support.txt)

2007-03-16:
        * mogstored: make child processes be exec'ed (as as their own scripts, not inhertting
          Perlbal, Linux::AIO/IO::AIO, etc baggage).  so they don't own listening
          sockets, pipes to child workers, signal handlers, etc.  just a lot
          cleaner now, and SIGTERM, SIGINT properly shut everything down now,
          both in foreground and as daemon

2007-03-15:
        * mogstored: this changelog is totally neglected.  :/  see svn log.

        * mogstored: make perlbal's "shutdown graceful" work, by not doing
          sidechannel accepting ourselves (which never hung up),
          but subclass Perlbal's TCPListener class, which does it
          all correctly.

2006-12/2007-01:  (2.00_05)
        * mogilefsd: everything converted to OO API internally.  old internal APIs removed.

        * mogilefsd: be database-agnostic.  Currently only works with MySQL (and
           SQLite as a joke/demo), but Pg/Oracle coming in the future.
